<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>9</version>
  </parent>

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.seeburger.fork.jtds</groupId>
  <artifactId>jtds</artifactId>
  <version>1.3.1.SEE3-SNAPSHOT</version>
  <packaging>bundle</packaging>
  <name>jTDS</name>

  <url>http://jtds.sourceforge.net</url>

  <licenses>
    <license>
      <name>LGPL</name>
      <url>http://www.gnu.org/copyleft/lesser.html</url>
    </license>
  </licenses>

  <description>jTDS is an open source 100% pure Java (type 4) JDBC 3.0 driver
    for Microsoft SQL Server (6.5, 7, 2000, 2005, 2008, 2012) and Sybase ASE
    (10, 11, 12, 15). jTDS is based on FreeTDS and is currently the fastest
    production-ready JDBC driver for SQL Server and Sybase. jTDS is 100% JDBC
    3.0 compatible, supporting forward-only and scrollable/updateable ResultSets
    and implementing all the DatabaseMetaData and ResultSetMetaData methods.
  </description>

  <scm>
        <connection>scm:git:git://github.com/seeburger-ag/jTDS.git</connection>
        <developerConnection>scm:git:git@github.com:seeburger-ag/jTDS.git</developerConnection>
        <url>http://github.com/seeburger-ag/jTDS</url>
    <tag>HEAD</tag>
  </scm>

  <developers>
    <developer>
      <id>momo</id>
      <name>Holger Rehn</name>
      <email>ickzon@users.sourceforge.net</email>
    </developer>
  </developers>

    <dependencies>
        <!-- jCIFS may be required for named pipe connections -->
        <dependency>
            <groupId>jcifs</groupId>
            <artifactId>jcifs</artifactId>
            <version>1.3.17</version>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.7</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>ISO8859-1</project.build.sourceEncoding>

        <!-- by default, do not fail on javadoc errors - became more strict with Java8 -->
        <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
    </properties>

  <build>
    <sourceDirectory>src/main</sourceDirectory>

    <resources>
        <resource>
            <directory>src/main</directory>
            <includes>
                <include>**/*.properties</include>
            </includes>
        </resource>
        <resource>
            <directory>src</directory>
            <includes>
                <include>META-INF/**</include>
            </includes>
        </resource>
    </resources>

    <testSourceDirectory>src/test</testSourceDirectory>

    <testResources>
        <testResource>
            <directory>conf</directory>
        </testResource>
    </testResources>

    <plugins>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>

        <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.6.1</version>
        </plugin>

        <plugin>
            <groupId>org.apache.felix</groupId>
            <artifactId>maven-bundle-plugin</artifactId>
            <version>3.3.0</version>
            <extensions>true</extensions>
            <configuration>
                <instructions>
                    <_noee>true</_noee>
                    <_nouses>true</_nouses>
                    <_exportcontents>*</_exportcontents>
                </instructions>
                <archive>
                    <manifestEntries>
                        <Implementation-Title>jTDS JDBC Driver</Implementation-Title>
                        <Implementation-Version>${project.version}</Implementation-Version>
                        <Implementation-URL>http://jtds.sourceforge.net</Implementation-URL>
                        <Specification-Title>JDBC</Specification-Title>
                        <Specification-Version>3.0</Specification-Version>
                        <Main-Class>net.sourceforge.jtds.jdbc.Driver</Main-Class>
                    </manifestEntries>
                </archive>
            </configuration>
        </plugin>

        <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <version>3.0.0</version>
            <executions>
                <execution>
                    <id>dist</id>
                    <phase>verify</phase>
                    <goals>
                        <goal>single</goal>
                    </goals>
                    <inherited>true</inherited>
                    <configuration>
                        <attach>true</attach>
                        <descriptors>
                            <descriptor>assembly.xml</descriptor>
                        </descriptors>
                        <ignoreMissingDescriptor>true</ignoreMissingDescriptor>
                    </configuration>
                </execution>
            </executions>
        </plugin>

        <plugin>
            <artifactId>maven-deploy-plugin</artifactId>
            <version>2.8.2</version>
        </plugin>

        <plugin>
            <artifactId>maven-release-plugin</artifactId>
            <version>2.5.3</version>
        </plugin>
    </plugins>
    <pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
                <configuration>
                    <!-- reset to defaults -->
                    <mavenExecutorId>invoker</mavenExecutorId>
                    <useReleaseProfile>true</useReleaseProfile>
                    <arguments combine.self="override">${arguments}</arguments>
              </configuration>
            </plugin>
        </plugins>
    </pluginManagement>
  </build>

</project>